--- a/notes.html
+++ b/notes.html
@@ -220,6 +220,15 @@
 
   <h3 style="margin-bottom: 0.2em;">
     <a href="rag/rag_app.html" style="text-decoration: none; color: gray;">
+     Does re-ranking help improve the performance of RAG?
+    </a>
+  </h3>
+  <p style="font-size: 0.9em; color: gray; margin-top: 0.5em;">
+    10 min read &nbsp; · &nbsp; September 15, 2025
+  </p>
+
+  <h3 style="margin-bottom: 0.2em;">
+    <a href="rag/rag_app.html" style="text-decoration: none; color: gray;">
       One Summary Doesn't Fit ALL: Role Aware Summarization of Research Papers using RAG
     </a>
   </h3>
