--- a/notes.html
+++ b/notes.html
@@ -219,7 +219,7 @@
   </h2>
 
   <h3 style="margin-bottom: 0.2em;">
-    <a href="rag/rag_app.html" style="text-decoration: none; color: gray;">
+    <a href="rag/reranking.html" style="text-decoration: none; color: gray;">
      Does re-ranking help improve the performance of RAG?
     </a>
   </h3>
