--- a/rag/reranking.html
+++ b/rag/reranking.html
@@ -2,14 +2,54 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Re-ranking in Retrieval-Augmented Generation (RAG)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Margi Pandya - Portfolio</title>
+  <link rel="stylesheet" href="../styles.css">
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-  <script id="MathJax-script" async
-    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
-  </script>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 <body>
-  <main>
+  <!-- Top Navigation Bar -->
+  <div class="masthead">
+    <div class="masthead__inner-wrap">
+      <div class="masthead__menu">
+        <nav id="site-nav" class="greedy-nav">
+          <button><div class="navicon"></div></button>
+          <ul class="visible-links">
+            <li class="masthead__menu-item masthead__menu-item--lg">
+              <a href="https://margipandya27.github.io/MargiPandya/">Margi Pandya</a>
+            </li>
+            <li class="masthead__menu-item">
+              <a href="https://margipandya27.github.io/MargiPandya/projects.html">Projects</a>
+            </li>
+            <li class="masthead__menu-item">
+              <a href="https://margipandya27.github.io/MargiPandya/notes.html">Blogs</a>
+            </li>
+            <li class="masthead__menu-item">
+              <a href="https://margipandya27.github.io/MargiPandya/publications.html">Publications</a>
+            </li>
+          </ul>
+          <ul class="hidden-links hidden"></ul>
+        </nav>
+      </div>
+    </div>
+  </div>
+<div class="page-content" style="display: flex; flex-direction: row; max-width: 1300px; margin: 0 auto; padding: 20px;">
+  <!-- Sidebar -->
+  <div class="sidebar sticky" style="width: 300px; padding: 20px;">
+    <div class="mainnotes-sidebar">
+      <h3>Main Notes</h3>
+      <ul>
+          <li><a href="https://margipandya27.github.io/MargiPandya/deep_gen/vae.html">Deep Generative Models</a></li>
+          <li><a href="agents.html">Agents</a></li>
+          <li><a href="https://margipandya27.github.io/MargiPandya/rag/naive_rag.html">RAGs</a></li>
+          <!-- Add more links as needed -->
+      </ul>
+    </div>
+  </div>
+
+
+<main style="flex: 1; padding: 20px; max-width: 1000px;">
     <article>
       <h1>Re-ranking in Retrieval-Augmented Generation (RAG) Systems</h1>
 
@@ -79,19 +119,17 @@
       </section>
     </article>
 
-    <aside>
-      <nav>
-        <h2>Navigation</h2>
-        <ul>
-          <li><a href="#overview">Overview</a></li>
-          <li><a href="#cross-encoder">Cross-Encoder Re-ranking</a></li>
-          <li><a href="#llm-based">LLM-based Re-ranking</a></li>
-          <li><a href="#api-based">API-based Solutions</a></li>
-          <li><a href="#discussion">Discussion</a></li>
-          <li><a href="#references">References</a></li>
-        </ul>
-      </nav>
-    </aside>
-  </main>
+    
+<footer class="page__meta">
+  <!-- Any additional metadata or footer information goes here -->
+</footer>
+
+<div class="page__footer">
+  <footer>
+    <!-- Your footer content goes here -->
+    <p>@2025 Margi Pandya</p>
+  </footer>
+</div>
+
 </body>
 </html>
